@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.0b12
 
 	- Documentation updates.
+	- The forms compatibility functions are now placed in a
+	  "fltk_forms" library to match FLTK 2.0.
 	- Renamed down() and frame() to fl_down() and
 	  fl_frame(), filename_xyz() to fl_filename_xyz(), and
 	  all of the define_FL_FOO() functions for the custom
